smoof 1.6.0.3
=============

* Added MMF1 to MMF13 problems from CEC2019 test suite
* Added SYM-Part simple, SYM-Part rotated and Omni-Test problems from CEC2019 test suite
* Added MMF14, MMF14a, MMF15 and MMF15a problems from CEC2019 test suite


smoof 1.6.0
===========

* Added bi-objective BBOB problem generator: makeBiObjBBOBFunction
* Added Kursawe function
* Added ED1 and ED2 functions
* Added WFG1 to WFG9 problems from the WFG-Problem Generator Toolkit
* Changed: renamed argument dimension to dimensions (this should not cause any problems with existing code)
* Changed: replaced geom_tile with geom_raster

smoof 1.5.1
===========

* logging and couting wrapper now have class smoof_function
* Fixed: convertTo{Minimization,Maximization} now flips sign of optima
* Better handling of additional arguments in makeFunctionsByName
* Added Shekel function
* Added inverted Vincent function
* Added modified Rastrigin function
* Added Hartmann{3,4,6} functions

smoof 1.5
=========

* Added shortcuts {s,m}nof for generating single-/multi-objective objective functionswith numeric parameters only
* Added: missing single-objective tag for BBOB functions
* Added: log.scale argument for autoplot
* Added: CITATION file
* Fixed: precision issue caused by rPython respectively RJSONIO::toJSON, which by
  default strips numeric values to only 4 digits.
* Fixed: ggplot2 warnings
* Fixed: wrong lower bound in MOP3 test function
* Fixed: issue in definition of Cosine Mixture Function due to faulty online sources
* Fixed: issue with min<->max conversion if functions has.simple.signature = FALSE and explicit return statement was used.
* Fixed: mean function was not set properly for noisy functions
* Improved docs slighly

smoof 1.4
=========

* Added makeGOMOPFunction to create multi-objective test function based on a set of
  single objective functions.
* Added new single-objective functions: Branin (modified version by Forrester et al. (2008))