@@ -4,7 +4,8 @@ smoof 1.6.0.3
 * Added MMF1 to MMF13 problems from CEC2019 test suite
 * Added SYM-Part simple, SYM-Part rotated and Omni-Test problems from CEC2019 test suite
 * Added MMF14, MMF14a, MMF15 and MMF15a problems from CEC2019 test suite
-
+* Added parameter size to addLoggingWrapper for improved performance
+* getLoggedValues now correctly names function parameters.
 
 smoof 1.6.0
 ===========
